# ez-interpolate

./: CMakeLists.txt  README.md  preconfig.cmake
cmake/: defaults.cmake  preconfig.cmake
include/ez/bezier/: BPath.hpp  Bezier.hpp
include/ez/bezier/intern/: BezierDerivatives.hpp  BezierElevate.hpp  BezierFitting.hpp  BezierInterpolation.hpp  BezierLength.hpp  BezierOffsets.hpp  BezierSplit.hpp  BezierUtil.hpp
include/ez/interpolate/: Knot.hpp  PointCloud.hpp  PointTrace.hpp
include/ez/interpolate/intern/: SortedPointCloud.hpp
test/: CMakeLists.txt  basic.cpp
test/approx/: CMakeLists.txt  engine.hpp  main.cpp
test/interactive/: CMakeLists.txt  context.cpp  context.hpp  engine.cpp  engine.hpp  gui.hpp  main.cpp
test/interactive/ops/: AddPoint.hpp  DragPoint.hpp  DragTangent.hpp  Select.hpp
tests/: CMakeLists.txt
tests/approx/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp  nvg.cpp  nvg.hpp
tests/basic/: CMakeLists.txt  bezier.cpp  derivative.cpp  interpolate.cpp  length.cpp  main.cpp  split.cpp
tests/bezier/: CMakeLists.txt
tests/bezier/bpath/: CMakeLists.txt  main.cpp
tests/bezier/common/: BezierCommon.cpp  BezierCommon.hpp
tests/bezier/fitting/: CMakeLists.txt  main.cpp
tests/bezier/include/: BPath.hpp  BezierCommon.hpp  Length.hpp  Offset.hpp  Tangent.hpp
tests/bezier/knots/: CMakeLists.txt  main.cpp
tests/bezier/offset/: CMakeLists.txt  main.cpp
tests/bezier/qpath/: CMakeLists.txt  main.cpp
tests/bezier/src/: BezierCommon.cpp  main.cpp
tests/gui/: CMakeLists.txt  approx.cpp  bpath.cpp  bpath2.cpp  length.cpp  offset.cpp  split.cpp  through.cpp
tests/gui/core/: BPath2.hpp  engine.cpp  engine.hpp  nvg.hpp
tests/interactive/: CMakeLists.txt  context.cpp  context.hpp  gui.cpp  main.cpp  window.cpp  window.hpp
tests/interactive/ops/: AddPoint.hpp  DragPoint.hpp  DragTangent.hpp  Select.hpp
